--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/dialogs": "^4.20.0",
     "@ionic-native/qr-scanner": "^5.18.0",
     "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/sqlite": "^5.21.5",
+    "@ionic-native/sqlite-porter": "^5.21.5",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/lab": "^2.0.9",
@@ -37,6 +39,7 @@
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-qrscanner": "^3.0.1",
+    "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
     "ngx-qrcode2": "0.0.9",
     "parse": "^2.6.0",
