--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/barcode-scanner": "^5.18.0",
-    "@ionic-native/base64-to-gallery": "^5.18.0",
-    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/barcode-scanner": "^5.22.0",
+    "@ionic-native/base64-to-gallery": "^5.22.0",
+    "@ionic-native/core": "^5.22.0",
     "@ionic-native/dialogs": "^4.20.0",
-    "@ionic-native/qr-scanner": "^5.18.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/sqlite": "^5.21.5",
-    "@ionic-native/sqlite-porter": "^5.21.5",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.1.0",
-    "@ionic/lab": "^2.0.9",
+    "@ionic-native/qr-scanner": "^5.22.0",
+    "@ionic-native/splash-screen": "^5.22.0",
+    "@ionic-native/sqlite": "^5.22.0",
+    "@ionic-native/sqlite-porter": "^5.22.0",
+    "@ionic-native/status-bar": "^5.22.0",
+    "@ionic/angular": "^4.11.10",
+    "@ionic/lab": "^2.0.19",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
     "cordova-base64-to-gallery": "^4.1.3",
@@ -40,18 +40,19 @@
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-qrscanner": "^3.0.1",
     "cordova-sqlite-storage": "^4.0.0",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.11",
     "ngx-qrcode2": "0.0.9",
-    "parse": "^2.6.0",
+    "parse": "^2.11.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.1",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.1",
     "utf8": "^3.0.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
@@ -60,23 +61,23 @@
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "cordova-plugin-device": "^2.0.2",
+    "codelyzer": "^5.2.1",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
